# pyPept

./: BUILD_WITH_UV.md  MODERNIZATION_SUMMARY.md  pyproject.toml
src/pyPept/: __init__.py  _compat.py
